--- a/data.tex
+++ b/data.tex
@@ -196,7 +196,7 @@
 % Petunjuk: hilangkan tanda << & >>, dan isi sesuai dengan data anda
 %=============================================================================
 \namanpm{Prayogo Cendra}{2014730033}
-\tanggal{<<tanggal>>}{<<bulan>>}{<<tahun>>}
+\tanggal{8}{5}{2018}
 \pembimbing{\CLF}{<<pembimbing pendamping/2>>}    
 \penguji{<<penguji 1>>}{<<penguji 2>>} 
 %=============================================================================
@@ -214,8 +214,8 @@
 % - gunakan \texorpdfstring{\\}{} untuk pindah ke baris baru
 % - judul TIDAK ditulis dengan menggunakan huruf besar seluruhnya !!
 %=============================================================================
-\judulINA{<<Judul Bahasa Indonesia>>}
-\judulENG{<<Judul Bahasa Inggris>>}
+\judulINA{Penghitung Jumlah Kamera Statis Minimum Dalam Suatu Ruangan Menggunakan Linear Programming}
+\judulENG{C}
 %_____________________________________________________________________________
 %=============================================================================
 % 								BAGIAN X
@@ -227,8 +227,12 @@
 % - hilangkan tanda << & >>, dan isi sesuai dengan data anda
 % - langsung mulai setelah '{' awal, jangan mulai menulis di baris bawahnya
 %=============================================================================
-\abstrakINA{<<Tuliskan abstrak anda di sini, dalam bahasa Indonesia>>}
-\abstrakENG{<<Tuliskan abstrak anda di sini, dalam bahasa Inggris>>} 
+\abstrakINA{
+Kamera CCTV merupakan kamera yang digunakan untuk memantau suatu lokasi dengan tujuan pengawasan dan keamanan. Kamera CCTV pada umumnya dipasang di tempat-tempat strategis sehingga mendapatkan jangkauan yang baik. Penempatan kamera CCTV di ruangan yang berbentuk sederhana (persegi panjang) tidaklah sulit. Kamera CCTV yang dibutuhkan pada umumnya berjumlah dua buah saja dan dipasang di kedua sudut ruangan sehingga saling berhadapan. Namun, jika ruangan berukuran besar, maka tujuan penggunaan kamera CCTV bukan hanya untuk mendeteksi adanya orang, melainkan juga untuk mengenali orang tersebut. Hal ini tentu menyebabkan kesulitan dalam menentukan jumlah minimum dan lokasi penempatan kamera CCTV agar seluruh ruangan terjangkau. Pada skripsi ini, akan dibuat sebuah perangkat lunak yang dapat menghasilkan penempatan-penempatan kamera CCTV yang paling minimum untuk menjangkau seluruh ruangan dengan menggunakan metode linear programming.
+}
+\abstrakENG{
+hi
+} 
 %=============================================================================
 
 %_____________________________________________________________________________
